add meta description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Folks",
   "name": "Folks | Gotta have them around 🫂",
-  "description": "Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you!",
+  "description": "Folks is everything you need. Share precious moments, memories & updates of your life with your folks instantly. Keep your folks around, all the time. We know how important they are for you! 🫂",
   "icons": [
     {
       "src": "favicon.ico",
