--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@chakra-ui/theme-tools": "^1.3.6",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/raleway": "^4.5.8",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "framer-motion": "^6.3.3",
@@ -16,8 +17,8 @@
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.43",
     "mockman-js": "^1.1.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
