--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/raleway": "^4.5.8",
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "framer-motion": "^6.3.3",
@@ -20,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uuid": "^8.3.2"
