--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.43",
     "mockman-js": "^1.1.5",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
